Created an API to add meme

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,7 @@
 
     <div class="container">
 
+        <button type="button" class="btn btn-primary" onclick="location.href='/add-meme';">Add Meme</button>
         <h1 class="text-center mb-4">All Memes</h1>
 
         <div class="row">
