--- a/src/main/resources/templates/meme_form.html
+++ b/src/main/resources/templates/meme_form.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Create a Meme</title>
+    <title>Post a Meme</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" />
@@ -11,11 +11,11 @@
 
 <body>
     <div class="container">
-        <h1>Create a Meme</h1>
+        <h1>Post a Meme</h1>
         <form th:action="@{/save-meme}" method="post">
             <div class="form-group">
-                <label for="name">Meme Name:</label>
-                <input type="text" id="name" name="name" class="form-control" />
+                <label for="title">Meme Title:</label>
+                <input type="text" id="title" name="title" class="form-control" />
             </div>
             <div class="form-group">
                 <label for="url">Meme Image URL:</label>
