--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -40,6 +40,60 @@
 </head>
 
 <body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Meme Gallery</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+
+
+
+            </ul>
+
+
+            <div class="ml-auto">
+
+                <form class="form-inline" th:action="@{/login}" method="GET">
+                    <button class="btn btn-outline-success" type="submit">Sign In</button>
+                    <!-- <button class="btn btn-sm btn-outline-secondary" type="button">Smaller button</button> -->
+                </form>
+            </div>
+
+            <div style="margin: 10px;"></div>
+
+            <div>
+
+                <form class="form-inline" th:action="@{/signup}" method="GET">
+                    <button class="btn btn-outline-success" type="submit">Sign Up</button>
+                    <!-- <button class="btn btn-sm btn-outline-secondary" type="button">Smaller button</button> -->
+                </form>
+
+
+            </div>
+
+
+
+        </div>
+
+
+
+    </nav>
+
+
+
     <div class="container">
         <div class="row">
             <div class="form-container">
@@ -69,6 +123,10 @@
                             <img th:src="${meme.url}" class="card-img-top" alt="Meme Image">
                             <div class="card-body">
                                 <p class="card-text" th:text="${meme.description}"></p>
+                                <form th:action="@{'/delete/' + ${meme.id}}" method="POST">
+                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                    <input type="hidden" name="_method" value="DELETE" />
+                                </form>
                             </div>
                         </div>
                     </div>
