--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,7 +35,9 @@
         }
     </style>
     <!-- Favicon -->
-    <!-- <link rel="icon" type="image/png" th:href="@{/icons8-super-mario-32.png}" /> -->
+    <link rel="icon" type="image/png"
+        th:href="@{https://icons.iconarchive.com/icons/yellowicon/game-stars/48/Mario-icon.png}"
+        crossorigin="anonymous" />
 
 </head>
 
